# NetLyzer

./: .gitignore  .replit  CMakeLists.txt  COMMANDS.md  README.md  USAGE_GUIDE.md  build.sh
include/netlyzer/core/: packet_model.h
include/netlyzer/gui/: hexdumpwidget.h  interfacedialog.h  mainwindow.h  packetdetailswidget.h  packetlistwidget.h
include/netlyzer/network/: packet_capture.h  packet_parser.h
include/netlyzer/utils/: error.h  logger.h
resources/: resources.qrc
src/: main.cpp
src/core/: packet_model.cpp
src/gui/: hexdumpwidget.cpp  interfacedialog.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.ui  packetdetailswidget.cpp  packetlistwidget.cpp
src/network/: packet_capture.cpp  packet_parser.cpp  packet_parser.h  packet_sniffer.cpp  packet_sniffer.h
src/utils/: logger.cpp  logger.h
tests/: CMakeLists.txt
